--- a/src/package.json
+++ b/src/package.json
@@ -1,24 +1,25 @@
 {
   "name": "evo-poster",
   "version": "3.0.0",
-  "description": "",
+  "description": "wip",
   "main": "index.js",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "fs": "^0.0.1-security",
+    "path": "^0.12.7"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": "git+https://github.com/sergiomrebelo/evo-poster.git",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/sergiomrebelo/evo-poster.git"
+  },
   "author": "sergiomrebelo",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/sergiomrebelo/evo-poster/issues"
   },
-  "homepage": "https://github.com/sergiomrebelo/evo-poster#readme",
-  "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "fs": "^0.0.1-security",
-    "nodemon": "^2.0.20",
-    "p5": "^1.5.0",
-    "path": "^0.12.7"
-  }
+  "homepage": "https://github.com/sergiomrebelo/evo-poster#readme"
 }
