--- a/src/package.json
+++ b/src/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "@nlpjs/neural": "^4.25.0",
+    "bootstrap": "^5.2.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -23,7 +24,8 @@
     "stopwords-json": "^1.2.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "browserify -t [ browserify-css --minify=true --output public/bundle.css ] public/main.js -o public/bundle.js"
   },
   "repository": {
     "type": "git",
@@ -36,6 +38,8 @@
   },
   "homepage": "https://github.com/sergiomrebelo/evo-poster#readme",
   "devDependencies": {
+    "browserify": "^17.0.0",
+    "browserify-css": "^0.15.0",
     "eslint": "^8.31.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.27.4"
