--- a/.gitignore
+++ b/.gitignore
@@ -6,17 +6,20 @@
 /httpRequests/
 
 #idea
-./.idea/
+.idea/
 
 #node modules
 node_modules/
 
+# env files
 src/.env
 *.env
+src/nlp-utils/.env
+
+# apple 
 .DS_Store
+
+# front-end bundle
 src/public/bundle.css
 src/public/bundle.js
-.ideia/
-.idea/modules.xml
-.idea/evo-poster.iml
-src/nlp-utils/.env
+
