--- a/src/package.json
+++ b/src/package.json
@@ -3,25 +3,12 @@
   "version": "3.0.0",
   "description": "The Evolutionary Poster Composer (evo-poster) is a computational design system for the automatic creation of poster designs based on a Genetic Algorithm.",
   "main": "index.js",
+  "type": "module",
   "dependencies": {
-    "@nlpjs/neural": "^4.25.0",
     "bootstrap": "^5.2.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "fin-negation": "^1.0.8",
-    "fin-urls": "^1.0.4",
-    "finnlp": "^1.1.1",
-    "fs": "^0.0.1-security",
-    "ibm-watson": "^7.1.2",
-    "node-emoji": "^1.11.0",
-    "node-fetch": "^3.3.0",
-    "path": "^0.12.7",
-    "patience-diff": "^0.0.2",
-    "sbd": "^1.0.19",
-    "spelt": "^0.0.3",
-    "spelt-gb-dict": "^1.0.1",
-    "stopwords-json": "^1.2.0"
+    "express": "^4.18.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
