--- a/src/nlp-utils/package.json
+++ b/src/nlp-utils/package.json
@@ -12,14 +12,16 @@
   "dependencies": {
     "@nlpjs/neural": "^4.25.0",
     "dotenv": "^16.0.3",
+    "en-norm": "^0.0.3",
     "fin-negation": "^1.0.8",
     "fin-urls": "^1.0.4",
     "finnlp": "^1.1.1",
     "fs": "^0.0.1-security",
     "ibm-watson": "^7.1.2",
+    "node-emoji": "^1.11.0",
+    "node-fetch": "^3.3.0",
     "path": "^0.12.7",
     "sbd": "^1.0.19",
-    "node-fetch": "^3.3.0",
     "spelt": "^0.0.3",
     "spelt-gb-dict": "^1.0.1",
     "stopwords-json": "^1.2.0",
