--- a/src/package.json
+++ b/src/package.json
@@ -8,11 +8,13 @@
     "bootstrap": "^5.2.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "npm": "^9.3.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "browserify -t [ browserify-css --minify=true --output public/bundle.css ] public/main.js -o public/bundle.js"
+    "build": "browserify -t [ browserify-css --minify=true --output public/bundle.css ] public/main.js -o public/bundle.js",
+    "watch": "npx watchify -t [ browserify-css --minify=true --output public/bundle.css ] public/main.js -o public/bundle.js"
   },
   "repository": {
     "type": "git",
@@ -29,6 +31,7 @@
     "browserify-css": "^0.15.0",
     "eslint": "^8.31.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.27.4"
+    "eslint-plugin-import": "^2.27.4",
+    "watchify": "^4.0.0"
   }
 }
