--- a/src/nlp-utils/ml-emotion-analysis/package.json
+++ b/src/nlp-utils/ml-emotion-analysis/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ml-emotion-analysis",
   "version": "1.3.0",
-  "description": "\"machine learning framework for the emotion-recognition into texts\"",
+  "description": "machine learning classifier for the emotion-recognition in texts",
   "main": "ml-emotion-analysis.mjs",
   "type": "module",
   "scripts": {
