--- a/src/nlp-utils/ml-emotion-analysis/package.json
+++ b/src/nlp-utils/ml-emotion-analysis/package.json
@@ -8,5 +8,9 @@
     "test": "node test.js"
   },
   "author": "Sérgio M. Rebelo <sergiorebelo@me.com> (http://sergiorebelo.work/)",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@nlpjs/neural": "^4.25.0",
+    "node-emoji": "^1.11.0"
+  }
 }
