--- a/src/nlp-utils/lexicon-emotion-analysis/package.json
+++ b/src/nlp-utils/lexicon-emotion-analysis/package.json
@@ -10,10 +10,12 @@
   "author": "Sérgio M. Rebelo <sergiorebelo@me.com> (http://sergiorebelo.work/)",
   "license": "ISC",
   "dependencies": {
+    "en-norm": "^0.0.3",
     "fin-negation": "^1.0.8",
     "fin-urls": "^1.0.4",
     "finnlp": "^1.1.1",
     "node-emoji": "^1.11.0",
+    "node-fetch": "^3.3.0",
     "stopwords-json": "^1.2.0"
   }
 }
