--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "npm": "^9.3.1"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build": "browserify -t [ browserify-css --minify=true --output public/bundle.css ] public/main.js -o public/bundle.js",
     "watch": "npx watchify -t [ browserify-css --minify=true --output public/bundle.css ] public/main.js -o public/bundle.js"
   },
@@ -20,18 +20,24 @@
     "type": "git",
     "url": "git+https://github.com/sergiomrebelo/evo-poster.git"
   },
-  "author": "Sérgio M. Rebelo <sergiorebelo@me.com> (http://sergiorebelo.work/)",
+  "author": "Sérgio M. Rebelo <sergiorebelo@me.com> (https://sergiorebelo.work/)",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/sergiomrebelo/evo-poster/issues"
   },
   "homepage": "https://github.com/sergiomrebelo/evo-poster#readme",
   "devDependencies": {
+    "@babel/core": "^7.20.12",
+    "@babel/plugin-syntax-import-assertions": "^7.20.0",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-typescript": "^7.18.6",
+    "babel-jest": "^29.4.1",
     "browserify": "^17.0.0",
     "browserify-css": "^0.15.0",
     "eslint": "^8.31.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.27.4",
+    "jest": "^29.4.1",
     "watchify": "^4.0.0"
   }
 }
