--- a/package.json
+++ b/package.json
@@ -8,13 +8,18 @@
     "bootstrap": "^5.2.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "npm": "^9.3.1"
+    "express": "^4.18.2"
+  },
+  "babel": {
+    "presets": [
+      "@babel/preset-env"
+    ]
   },
   "scripts": {
-    "test": "jest",
+    "test": "node --experimental-vm-modules node_modules/.bin/jest",
     "build": "browserify -t [ browserify-css --minify=true --output public/bundle.css ] public/main.js -o public/bundle.js",
-    "watch": "npx watchify -t [ browserify-css --minify=true --output public/bundle.css ] public/main.js -o public/bundle.js"
+    "watch": "npx watchify -t [ browserify-css --minify=true --output public/bundle.css ] public/main.js -o public/bundle.js",
+    "dev": "nodemon --exec babel-node src/index.js"
   },
   "repository": {
     "type": "git",
@@ -27,17 +32,17 @@
   },
   "homepage": "https://github.com/sergiomrebelo/evo-poster#readme",
   "devDependencies": {
+    "@babel/cli": "^7.20.7",
     "@babel/core": "^7.20.12",
-    "@babel/plugin-syntax-import-assertions": "^7.20.0",
+    "@babel/node": "^7.20.7",
     "@babel/preset-env": "^7.20.2",
-    "@babel/preset-typescript": "^7.18.6",
-    "babel-jest": "^29.4.1",
     "browserify": "^17.0.0",
     "browserify-css": "^0.15.0",
     "eslint": "^8.31.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.27.4",
     "jest": "^29.4.1",
+    "nodemon": "^2.0.20",
     "watchify": "^4.0.0"
   }
 }
