--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@babel/core": "^7.20.12",
     "@babel/node": "^7.20.7",
     "@babel/preset-env": "^7.20.2",
+    "@evoposter/nlp": "file:src/@evoposter/nlp",
     "browserify": "^17.0.0",
     "browserify-css": "^0.15.0",
     "eslint": "^8.31.0",
@@ -43,6 +44,7 @@
     "eslint-plugin-import": "^2.27.4",
     "jest": "^29.4.1",
     "nodemon": "^2.0.20",
+    "save": "^2.9.0",
     "watchify": "^4.0.0"
   }
 }
