--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "bootstrap": "^5.2.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "@evoposter/nlp": "file:src/@evoposter/nlp"
   },
   "babel": {
     "presets": [
@@ -36,7 +37,6 @@
     "@babel/core": "^7.20.12",
     "@babel/node": "^7.20.7",
     "@babel/preset-env": "^7.20.2",
-    "@evoposter/nlp": "file:src/@evoposter/nlp",
     "browserify": "^17.0.0",
     "browserify-css": "^0.15.0",
     "eslint": "^8.31.0",
