--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "main": "src/index.js",
   "type": "module",
   "dependencies": {
+    "@evoposter/nlp": "file:src/@evoposter/nlp",
     "bootstrap": "^5.2.3",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "@evoposter/nlp": "file:src/@evoposter/nlp"
+    "express": "^4.18.2"
   },
   "babel": {
     "presets": [
@@ -17,9 +18,9 @@
     ]
   },
   "scripts": {
-    "test": "node --experimental-vm-modules node_modules/.bin/jest",
+    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules npx jest",
     "build": "browserify -t [ browserify-css --minify=true --output public/bundle.css ] public/main.js -o public/bundle.js",
-    "watch": "npx watchify -t [ browserify-css --minify=true --output public/bundle.css ] public/main.js -o public/bundle.js",
+    "watch": "watchify -t [ browserify-css --minify=true --output public/bundle.css ] public/main.js -o public/bundle.js",
     "dev": "nodemon --exec babel-node src/index.js"
   },
   "repository": {
@@ -39,10 +40,9 @@
     "@babel/preset-env": "^7.20.2",
     "browserify": "^17.0.0",
     "browserify-css": "^0.15.0",
-    "eslint": "^8.31.0",
+    "eslint": "^8.42.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.27.4",
-    "jest": "^29.4.1",
+    "jest": "^29.5.0",
     "nodemon": "^2.0.20",
     "save": "^2.9.0",
     "watchify": "^4.0.0"
