--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "pm2": "^5.3.0"
   },
   "babel": {
     "presets": [
@@ -21,7 +22,9 @@
     "test": "cross-env NODE_OPTIONS=--experimental-vm-modules npx jest",
     "build": "browserify -t [ browserify-css --minify=true --output public/bundle.css ] public/main.js -o public/bundle.js",
     "watch": "watchify -t [ browserify-css --minify=true --output public/bundle.css ] public/main.js -o public/bundle.js",
-    "dev": "nodemon --exec babel-node src/index.js"
+    "dev": "nodemon --exec babel-node src/index.js",
+    "start": "pm2 start src/index.js",
+    "stop": "pm2 stop src/index.js"
   },
   "repository": {
     "type": "git",
