--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "scripts": {
     "test": "cross-env NODE_OPTIONS=--experimental-vm-modules npx jest",
+    "build2": "rollup --config",
     "build": "browserify -t [ browserify-css --minify=true --output public/bundle.css ] public/main.js -o public/bundle.js",
     "watch": "watchify -t [ browserify-css --minify=true --output public/bundle.css ] public/main.js -o public/bundle.js",
     "dev": "nodemon --exec babel-node src/index.js",
@@ -47,6 +48,7 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "jest": "^29.5.0",
     "nodemon": "^2.0.20",
+    "rollup": "^3.25.1",
     "save": "^2.9.0",
     "watchify": "^4.0.0"
   }
