--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "@babel/core": "^7.20.12",
     "@babel/node": "^7.20.7",
     "@babel/preset-env": "^7.20.2",
+    "@rollup/plugin-json": "^6.0.0",
+    "@rollup/plugin-terser": "^0.4.3",
     "browserify": "^17.0.0",
     "browserify-css": "^0.15.0",
     "eslint": "^8.42.0",
@@ -49,6 +51,8 @@
     "jest": "^29.5.0",
     "nodemon": "^2.0.20",
     "rollup": "^3.25.1",
+    "rollup-plugin-import-css": "^3.2.1",
+    "rollup-plugin-watch": "^1.0.2",
     "save": "^2.9.0",
     "watchify": "^4.0.0"
   }
