--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "watch": "watchify -t [ browserify-css --minify=true --output public/bundle.css ] public/main.js -o public/bundle.js",
     "dev": "nodemon --exec babel-node src/index.js",
     "start": "pm2 start src/index.js",
-    "stop": "pm2 stop src/index.js"
+    "stop": "pm2 stop src/index.js",
+    "cypress:open":"cypress open"
   },
   "repository": {
     "type": "git",
@@ -48,6 +49,7 @@
     "@rollup/plugin-terser": "^0.4.3",
     "browserify": "^17.0.0",
     "browserify-css": "^0.15.0",
+    "cypress": "^12.15.0",
     "eslint": "^8.42.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "jest": "^29.5.0",
