--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "dev": "nodemon --exec babel-node src/index.js",
     "start": "pm2 start src/index.js",
     "stop": "pm2 stop src/index.js",
-    "cypress:open":"cypress open"
+    "test:cypress": "cypress open --project test"
   },
   "repository": {
     "type": "git",
@@ -50,9 +50,11 @@
     "browserify": "^17.0.0",
     "browserify-css": "^0.15.0",
     "cypress": "^12.15.0",
+    "cypress-multi-reporters": "^1.6.3",
     "eslint": "^8.42.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "jest": "^29.5.0",
+    "mocha-junit-reporter": "^2.2.0",
     "nodemon": "^2.0.20",
     "rollup": "^3.25.1",
     "rollup-plugin-import-css": "^3.2.1",
