--- a/package.json
+++ b/package.json
@@ -6,18 +6,10 @@
   "type": "module",
   "dependencies": {
     "@evoposter/nlp": "file:src/@evoposter/nlp",
-    "bootstrap": "^5.2.3",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
-    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "p5js": "^1.2.18",
     "pm2": "^5.3.0"
-  },
-  "babel": {
-    "presets": [
-      "@babel/preset-env"
-    ]
   },
   "scripts": {
     "test": "cross-env NODE_OPTIONS=--experimental-vm-modules npx jest",
@@ -40,23 +32,14 @@
   },
   "homepage": "https://github.com/sergiomrebelo/evo-poster#readme",
   "devDependencies": {
-    "@babel/cli": "^7.20.7",
-    "@babel/core": "^7.20.12",
-    "@babel/node": "^7.20.7",
-    "@babel/preset-env": "^7.20.2",
     "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-terser": "^0.4.3",
     "cypress": "^12.15.0",
-    "cypress-multi-reporters": "^1.6.3",
-    "eslint": "^8.42.0",
-    "eslint-config-airbnb-base": "^15.0.0",
     "jest": "^29.5.0",
-    "mocha-junit-reporter": "^2.2.0",
-    "nodemon": "^2.0.20",
+    "nodemon": "^2.0.22",
     "rollup": "^3.25.1",
     "rollup-plugin-import-css": "^3.2.1",
-    "rollup-plugin-watch": "^1.0.2",
-    "save": "^2.9.0",
-    "watchify": "^4.0.0"
+    "p5": "^1.6.0",
+    "bootstrap": "^5.3.0"
   }
 }
