--- a/package.json
+++ b/package.json
@@ -33,13 +33,16 @@
   "homepage": "https://github.com/sergiomrebelo/evo-poster#readme",
   "devDependencies": {
     "@rollup/plugin-json": "^6.0.0",
+    "@rollup/plugin-node-resolve": "^15.1.0",
     "@rollup/plugin-terser": "^0.4.3",
+    "@web/rollup-plugin-html": "^2.0.0",
+    "bootstrap": "^5.3.0",
     "cypress": "^12.15.0",
     "jest": "^29.5.0",
+    "lit": "^2.7.5",
     "nodemon": "^2.0.22",
-    "rollup": "^3.25.1",
-    "rollup-plugin-import-css": "^3.2.1",
     "p5": "^1.6.0",
-    "bootstrap": "^5.3.0"
+    "rollup": "^3.25.1",
+    "rollup-plugin-import-css": "^3.2.1"
   }
 }
