--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "rollup": "^3.25.1",
     "rollup-plugin-delete": "^2.0.0",
     "rollup-plugin-import-css": "^3.2.1",
+    "rollup-plugin-livereload": "^2.0.5",
     "rollup-plugin-scss": "^4.0.0",
     "rollup-plugin-summary": "^2.0.0",
     "sass": "^1.63.6"
