--- a/package.json
+++ b/package.json
@@ -35,13 +35,16 @@
     "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^15.1.0",
     "@rollup/plugin-terser": "^0.4.3",
+    "@rollup/plugin-url": "^8.0.1",
     "@web/rollup-plugin-html": "^2.0.0",
     "bootstrap": "^5.3.0",
+    "bootstrap-slider": "^11.0.2",
     "cypress": "^12.15.0",
     "jest": "^29.5.0",
     "lit": "^2.7.5",
     "nodemon": "^2.0.22",
     "p5": "^1.6.0",
+    "range-slider-input": "^2.4.4",
     "rollup": "^3.25.1",
     "rollup-plugin-delete": "^2.0.0",
     "rollup-plugin-import-css": "^3.2.1",
