--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "p5": "^1.6.0",
     "range-slider-input": "^2.4.4",
     "rollup": "^3.25.1",
+    "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-delete": "^2.0.0",
     "rollup-plugin-import-css": "^3.2.1",
     "rollup-plugin-livereload": "^2.0.5",
