--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "express": "^4.18.2",
+    "lodash": "^4.17.21",
     "pm2": "^5.3.0"
   },
   "scripts": {
@@ -42,6 +43,7 @@
     "cypress": "^12.15.0",
     "jest": "^29.5.0",
     "lit": "^2.7.5",
+    "lodash.clonedeep": "^4.5.0",
     "nodemon": "^2.0.22",
     "p5": "^1.6.0",
     "range-slider-input": "^2.4.4",
