feat: Grid Size Appropriateness metric #46

--- a/src/@evoposter/evaluator/package.json
+++ b/src/@evoposter/evaluator/package.json
@@ -12,5 +12,8 @@
     "url": "git+https://github.com/sergiomrebelo/evo-poster.git"
   },
   "author": "Sérgio M. Rebelo <sergiorebelo@me.com> (https://sergiorebelo.work/)",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "jest": "^29.6.1"
+  }
 }
