--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "homepage": "https://github.com/sergiomrebelo/evo-poster#readme",
   "devDependencies": {
+    "@evoposter/evaluator": "file:src/@evoposter/evaluator",
     "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^15.1.0",
     "@rollup/plugin-terser": "^0.4.3",
@@ -41,7 +42,6 @@
     "bootstrap": "^5.3.0",
     "bootstrap-slider": "^11.0.2",
     "cypress": "^12.15.0",
-    "cypress-wait-until": "^2.0.0",
     "jest": "^29.5.0",
     "lit": "^2.7.5",
     "lodash.clonedeep": "^4.5.0",
