--- a/src/@evoposter/evaluator/package.json
+++ b/src/@evoposter/evaluator/package.json
@@ -2,9 +2,10 @@
   "name": "@evoposter/evaluator",
   "version": "0.0.1",
   "description": "set of metric for evaluation of poster designs",
-  "main": "src/index.mjs",
+  "main": "lib/evaluator.js",
   "scripts": {
-    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules npx jest"
+    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules npx jest",
+    "build": "rollup --config"
   },
   "type": "module",
   "repository": {
@@ -14,6 +15,8 @@
   "author": "Sérgio M. Rebelo <sergiorebelo@me.com> (https://sergiorebelo.work/)",
   "license": "ISC",
   "devDependencies": {
-    "jest": "^29.6.1"
+    "@rollup/plugin-terser": "^0.4.3",
+    "jest": "^29.6.1",
+    "rollup": "^3.28.0"
   }
 }
