--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cross-env": "^7.0.3",
     "express": "^4.18.2",
     "lodash": "^4.17.21",
+    "nedb": "^1.8.0",
     "pm2": "^5.3.0"
   },
   "scripts": {
@@ -18,7 +19,7 @@
     "test:cypress": "cypress open",
     "build": "rollup --config",
     "watch": "rollup -c -w",
-    "dev": "nodemon --exec babel-node src/server.js",
+    "dev": "nodemon src/server.js",
     "start": "pm2 start src/server.js --name evoposter",
     "stop": "pm2 stop evoposter",
     "restart": "pm2 restart evoposter"
