--- a/src/@evoposter/evaluator/package.json
+++ b/src/@evoposter/evaluator/package.json
@@ -4,7 +4,7 @@
   "description": "set of metric for evaluation of poster designs",
   "main": "lib/evaluator.js",
   "scripts": {
-    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules npx jest",
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest",
     "build": "rollup --config"
   },
   "type": "module",
