--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   },
   "scripts": {
     "test": "cross-env NODE_OPTIONS=--experimental-vm-modules npx jest",
-    "test:cypress": "cypress open",
+    "test:cypress": "cypress run",
+    "evolve": "cypress run --record --spec 'cypress/e2e/evolution.cy.js'",
     "build": "rollup --config",
     "watch": "rollup -c -w",
     "dev": "nodemon src/server.js",
@@ -42,7 +43,7 @@
     "@web/rollup-plugin-html": "^2.0.0",
     "bootstrap": "^5.3.0",
     "bootstrap-slider": "^11.0.2",
-    "cypress": "^12.15.0",
+    "cypress": "^13.3.1",
     "jest": "^29.5.0",
     "lit": "^2.7.5",
     "lodash.clonedeep": "^4.5.0",
