--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "scripts": {
     "test": "cross-env NODE_OPTIONS=--experimental-vm-modules npx jest",
-    "test:cypress": "cypress run",
+    "test:cypress": "cypress open",
     "evolve": "cypress run --record --spec 'cypress/e2e/evolution.cy.js'",
     "build": "rollup --config",
     "watch": "rollup -c -w",
@@ -43,11 +43,16 @@
     "@web/rollup-plugin-html": "^2.0.0",
     "bootstrap": "^5.3.0",
     "bootstrap-slider": "^11.0.2",
+    "csv": "^6.3.5",
+    "csv-stringify": "^6.4.4",
     "cypress": "^13.3.1",
+    "i": "^0.3.7",
+    "install": "^0.13.0",
     "jest": "^29.5.0",
     "lit": "^2.7.5",
     "lodash.clonedeep": "^4.5.0",
     "nodemon": "^2.0.22",
+    "npm": "^10.2.1",
     "p5": "^1.6.0",
     "range-slider-input": "^2.4.4",
     "rollup": "^3.25.1",
