feat: add experiment data

--- a/.gitignore
+++ b/.gitignore
@@ -26,4 +26,7 @@ src/public/bundle.js
 cypress/downloads/
 *.db
 
-/res
+/res/1-experiment-s-0
+/res/2-experiment-0-a
+/res/3-experiment-s-a
+/res/misc-res
